# bayesian-optimization

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
bayesian_optimizer/: __init__.py  acquisition.py  plot_graph.py
model/: __init__.py  resnet.py
trainer/: __init__.py  callbacks.py  common.py  lit_resnet.py
